--- a/mod.less
+++ b/mod.less
@@ -1,5 +1,7 @@
 // Removed things
 .thing.spam {
+    padding: 8px 8px 8px 0 !important;
+    
     background-color: @mod-remove-bg !important;
 }
 
@@ -39,9 +41,9 @@
     overflow: hidden;   // wat
 }
 
-/****************
-* Toolbox fixes *
-****************/
+//****************
+// Toolbox fixes *
+//****************
 
 .mod-toolbox .menuarea.modtools {
     margin-right: 0 !important;
