--- a/style.less
+++ b/style.less
@@ -159,12 +159,12 @@
 * Text *
 *******/
 
-@downvote-message: "off-topic or does not contribute to discussion";
-
-@no-results-message: "there don't seem to be any friends here";
-
 @side-user-text: "Challenger players";
 @side-online-text: "losing LP";
+
+@downvote-message: "off-topic or does not contribute to discussion";
+@no-results-message: "there don't seem to be any friends here";
+@spoilers-message: "Hidden for spoilers";
 
 @submit-flood-warning: "Submissions are temporarily disabled to prevent excessive flooding.";
 @submit-rules-warning: "Please read subreddit rules before posting. Subscribe or hover to dismiss.";
